# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")
import("//mojo/public/tools/bindings/mojom.gni")

group("bank_app") {
  deps = [
    ":customer",
    ":bank",
  ]
}

mojo_native_application("customer") {
  output_name = "customer"

  deps = [
    ":bindings",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/services/vanadium/security/interfaces",
  ]

  sources = [
    "customer.cc",
  ]
}

mojo_native_application("bank") {
  output_name = "bank"

  deps = [
    ":bindings",
    "//mojo/common",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/services/vanadium/security/interfaces",
  ]

  sources = [
    "bank.cc",
  ]
}

mojom("bindings") {
  sources = [
    "bank.mojom",
  ]
}
