# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("forwarding_content_handler") {
  sources = [
    "forwarding_content_handler.cc",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/application:content_handler",
    "//mojo/data_pipe_utils",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/public/interfaces/application:application",
    "//mojo/services/content_handler/interfaces",
    "//mojo/services/network/interfaces",
  ]
}
