# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("media_test") {
  sources = [
    "keystroke.cc",
    "keystroke.h",
    "media_test.cc",
    "media_test.h",
    "media_test_app.cc",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/environment:chromium",
    "//mojo/gpu",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/utility",
    "//mojo/public/interfaces/application",
    "//mojo/services/media/audio/interfaces",
    "//mojo/services/media/common/cpp",
    "//mojo/services/media/common/interfaces",
    "//mojo/services/media/control/interfaces",
  ]
}
