# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("native_run_app") {
  sources = [
    "native_run_app.cc",
  ]

  deps = [
    "//base",
    "//mojo/application",
    "//mojo/public/cpp/bindings",
    "//mojo/public/interfaces/application",
    "//mojo/services/files/interfaces",
    "//mojo/services/native_support/interfaces",
    "//mojo/services/terminal/interfaces",
  ]
}
