# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("shadows") {
  output_name = "shadows_view"

  sources = [
    "main.cc",
    "penumbra_program.cc",
    "penumbra_program.h",
    "shadows_app.cc",
    "shadows_app.h",
    "shadows_renderer.cc",
    "shadows_renderer.h",
    "shadows_view.cc",
    "shadows_view.h",
  ]

  deps = [
    "//base",
    "//examples/shadows/vfx",
    "//mojo/application",
    "//mojo/common",
    "//mojo/environment:chromium",
    "//mojo/gpu",
    "//mojo/public/c/gpu",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/environment",
    "//mojo/public/cpp/system",
    "//mojo/services/geometry/cpp",
    "//mojo/services/geometry/interfaces",
    "//mojo/services/gfx/composition/interfaces",
    "//mojo/services/ui/views/interfaces",
    "//mojo/skia",
    "//mojo/ui",
    "//mojo/ui:ganesh",
    "//mojo/ui:gl",
    "//skia",
  ]
}
