# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("spinning_cube") {
  sources = [
    "gles2_client_impl.cc",
    "gles2_client_impl.h",
    "spinning_cube_app.cc",
  ]

  deps = [
    ":lib",
    "//base",
    "//mojo/public/c/gpu",
    "//mojo/public/c/gpu:gpu_onscreen",
    "//mojo/public/cpp/application:standalone",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/environment",
    "//mojo/public/cpp/system",
    "//mojo/public/cpp/utility",
    "//mojo/services/geometry/interfaces",
    "//mojo/services/native_viewport/interfaces",
  ]
}

source_set("lib") {
  sources = [
    "spinning_cube.cc",
    "spinning_cube.h",
  ]

  deps = [
    "//base",
    "//mojo/public/c/gpu",
    "//mojo/public/c/gpu:MGL",
    "//mojo/public/cpp/environment",
  ]
}
