# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//mojo/public/mojo_application.gni")

mojo_native_application("trace_me") {
  sources = [
    "trace_me_app.cc",
  ]

  deps = [
    "//base",
    "//mojo/application:application",
    "//mojo/common:tracing_impl",
    "//mojo/public/cpp/application",
    "//mojo/public/cpp/utility",
  ]
}
