# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//fusl/fusl.gni")

fusl_source_set("ldso") {
  configs = [ "//fusl:fusl_no_stack_protector_config" ]

  sources = [
    "dlstart.c",
    "dynlink.c",
  ]
}
