# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

group("dart") {
  deps = [
    "//mojo/dart/embedder",
    "//mojo/dart/packages",
  ]
}

group("tests") {
  testonly = true
  deps = [
    "//mojo/dart/apptests",
    "//mojo/dart/unittests",
  ]
}
